fixed visibility property for modal window

--- a/css/styles.css
+++ b/css/styles.css
@@ -694,12 +694,14 @@ body {
 	z-index: 2;
 	background-color: rgba(0, 0, 0, 0.2);
 	opacity: 1;
-	transition: opacity 250ms var(--cubic-bezier);
+	visibility: visible;
+	transition: opacity 250ms var(--cubic-bezier), visibility 250ms var(--cubic-bezier);
 }
 
 .backdrop.is-hidden {
 	opacity: 0;
 	pointer-events: none;
+	visibility: hidden;
 }
 
 .no-scroll {
